[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "data-array"
version = "0.1.0"
description = "A Python package for handling data arrays with axis labels"
authors = [
    { name = "claudio525", email = "claudio525@example.com" }
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/claudio525/data-array"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
Source = "https://github.com/claudio525/data-array"

[project.scripts]
# Define your command-line scripts here

[project.dependencies]
numpy = "^1.21.2"
pandas = "^1.3.3"

[project.dev-dependencies]
# Define your development dependencies here