[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["labelled_data_array"]

[project]
name = "labelled-data-array"
version = "0.1.0"
description = "A Python package for handling data arrays with axis labels"
authors = [
    { name = "claudio525", email = "claudio525@example.com" }
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "pandas"
]

[project.urls]
Source = "https://github.com/claudio525/data-array"

